--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,4 +52,4 @@ flutter:
   - lib\images\ozvuch-sebya.png
   - lib\images\header_photo01.png
   - lib\images\blur_backgr.png
-  
+  - lib\images\header_photo02.png
